--- a/src/Components/Routing/Style.css
+++ b/src/Components/Routing/Style.css
@@ -1,7 +1,8 @@
 .wrapper {
+  display: block;
   padding: 40px;
   width: 500px;
-  margin: auto auto;
+  margin: 50px auto;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   font-size: 2rem;
 }
@@ -25,4 +26,10 @@
 tbody tr:hover {
   color: black;
   background-color: rgb(39, 63, 167) !important;
+}
+.linkStyle:hover {
+  text-decoration: none !important;
+}
+.addDataBtn {
+  margin: 30px auto;
 }
